--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,10 +15,6 @@ body {
   height: 15vh;
   background-color: #eee;
   border-top: 1px solid #e0e0e0;
-  // position: fixed;
-  // bottom: 0;
-  // right: 0;
-  // left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,8 +48,6 @@ body {
   justify-content: center;
   cursor: pointer;
 }
-
-// ////////////////////////
 
 .copy-right {
   display: flex;
@@ -95,15 +89,6 @@ body {
   }
 }
 
-// search-bar
-
-.search-bar-container {
-  // position: absolute;
-  // right: 0;
-  // left: 0;
-  // top: 64px;
-}
-
 .search-bar {
   background-color: #fff;
   height: 58px;
@@ -133,27 +118,26 @@ body {
 
 .expand-header {
   width: 100%;
-  height: 305px;
   background-color: #e4e4ee;
   padding-left: 241px;
   display: flex;
 
+  .arrow {
+    margin: 17px 0 0 17px;
+  }
+
   img {
-    padding: 17px;
+    padding: 12px;
+    border-radius: 50%;
+    width: 12%;
   }
 
   .expand-header__description {
     display: flex;
     flex-direction: column;
-    // align-items: center;
     justify-content: center;
     margin: 10px;
-    // text-align: center;
 
-
-    span{
-      margin-top: 5px;
-    }
     .expand-header__titl {
       font-size: 24px;
       font-weight: 600;
